--- a/resources/css/components/_header.scss
+++ b/resources/css/components/_header.scss
@@ -13,13 +13,46 @@
         @apply text-white font-semibold text-xl;
 
         a {
-            @apply px-4 p-2;
+            @apply px-4 md:p-2 w-full md:w-auto;
+        }
+
+        input {
+            @apply px-4 md:p-2 md:p-0 md:px-0;
         }
 
         .current-menu-item {
+            @apply bg-blue-300 w-full md:bg-transparent md:w-auto;
+
             a {
-                @apply border-b-2 border-blue-300;
+                @apply md:border-b-2 md:border-blue-300;
             }
+        }
+    }
+}
+
+.c-header__bars {
+    @apply absolute right-[10px] duration-100;
+
+    div {
+        @apply block duration-300 rotate-0 ml-0 bg-white w-8 h-1 rounded-lg;
+    }
+
+    &.menu-open {
+        .one {
+            transform: rotate(135deg);
+            margin-bottom: -1px;
+            margin-top: 9px
+        }
+
+        .two {
+            margin-left: -10px;
+            margin-top: -5px;
+            background-color: transparent;
+        }
+
+        .three {
+            transform: rotate(-135deg);
+            margin-top: -7px;
         }
     }
 }
