Quick fix for selectted player tiles

--- a/resources/css/components/_button.scss
+++ b/resources/css/components/_button.scss
@@ -12,4 +12,12 @@
     &__gray {
         @apply text-white bg-gray-500 hover:bg-gray-600;
     }
+
+    &__green {
+        @apply text-white bg-green-400 hover:bg-green-600;
+    }
+
+    &__red {
+        @apply text-white bg-red-400 hover:bg-red-600;
+    }
 }
